add npm dotenv. add config folder. add database.js file.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,10 @@
 body {
+  background-color:rgb(36, 26, 41);
+  color: rgb(255, 0, 0);
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 25px "Chiller", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #9bc9cc;
 }
