--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>New Dev Skill</h1>
-  <form action="/skillss" method="POST" autocomplete="off">
+  <form action="/skills" method="POST" autocomplete="off">
     <input type="text" name="text">
     <button type="submit">Save Skill</button>
   </form>
