--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -10,9 +10,9 @@
 <body>
   <h1>Dev Skills List</h1>
   <ul>
-    <% skills.forEach(skill => { %>
+    <% skills.forEach(function(skill) { %>
       <li>
-				<%= skill.text %> 
+				<a href="/skills/<%= skill._id %>"><%= skill.text %></a>
 				- 
 				<%= skill.basics ? 'learned' : 'not yet completed' %>
 			</li>
