--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -14,7 +14,7 @@
       <li>
 				<a href="/skills/<%= skill._id %>"><%= skill.text %></a>
 				- 
-				<%= skill.basics ? 'learned' : 'not yet completed' %>
+				<%= skill.basics ? 'learned' : 'not yet/complete' %>
 			</li>
     <% }) %>
   </ul>
