add time to comtroller, view/index.ejs, and server.js

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,7 +8,7 @@
   <title>Dev Skills List</title>
 </head>
 <body>
-  <h1>Dev Skills List</h1>
+  <h1>Dev Skills List as of <%= time %></h1>
   <ul>
     <% skills.forEach(function(skill) { %>
       <li>
