--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -25,8 +25,10 @@
 			</li>
     <% }) %>
   </ul>
-  <a href="/skills/new">Add a Dev Skill</a>
+  <form action="skills/new">
+  <button class="new" id="add">Add a Dev Skill</button>
+  </form>
   <br>
-  <a href="/">Back</a>
+  <a href="/">Back to Landing Page</a>
 </body>
 </html>
