--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -10,8 +10,12 @@
 <body>
   <h1>New Dev Skill</h1>
   <form action="/skills" method="POST" autocomplete="off">
-    <input type="text" name="text">
-    <button type="submit">Save Skill</button>
+    <input type="text" name="text" id="input" class="new">
+    <button type="submit" id="submit" class="new">Save Skill</button>
+    <br>
+    <a href="/skills">Back to Skills List</a>
+    <br>
+    <a href="/">Back to Landing Page</a>
   </form>
 </body>
 </html>
