--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -12,6 +12,8 @@
   <h2>Skill #<%= skill._id %></h2>
   <h3><%= skill.text %></h3>
   <p>Completed?: <%= skill.basics ? 'learned' : 'not yet/incomplete' %></p>
-	<a href="/skills">Go back</a>
+	<a href="/skills">Back to Skills List</a>
+  <br>
+  <a href="/">Back to Landing Page</a>
 </body>
 </html>
